css/css-transitions/non-rendered-element-004.tentative.html is a unique failure https://bugs.webkit.org/show_bug.cgi?id=235137 rdar://87785165

Reviewed by Antti Koivisto.

While we correctly call Styleable::cancelDeclarativeAnimations() during renderer teardown
in RenderTreeUpdater::tearDownRenderers(), only the provided element and its descendants
would be considered, but we did no work for anonymous renderers such as ::marker renderers.

We now also call Styleable::cancelDeclarativeAnimations() if we're dealing with an element
with a RenderListMarker renderer.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/non-rendered-element-004.tentative-expected.txt:
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::tearDownRenderers):

Canonical link: https://commits.webkit.org/260352@main